--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -138,77 +138,6 @@ body {
   background: #eef2ff;
   color: var(--brand);
 }
-
-
-
-
-
-
-
-
-
-/* =============== MOBILE RESPONSIVE (max 880px) =============== */
-@media (max-width: 880px) {
-
-  body {
-    flex-direction: column;
-    overflow-x: hidden;
-  }
-
-  /* Hide sidebar off-screen */
-  .sidebar {
-    position: fixed;
-    left: -260px;
-    top: 0;
-    height: 100vh;
-    width: 260px;
-    transition: 0.3s ease;
-    z-index: 9999;
-  }
-
-  /* When opened */
-  .sidebar.show {
-    left: 0;
-  }
-
-  /* Topbar layout change */
-  .topbar {
-    justify-content: space-between;
-  }
-
-  /* --- HIDE ACCOUNT + LOGOUT ON MOBILE --- */
-  .topbar a,
-  .topbar button {
-    display: none !important;
-  }
-  /* --------------------------------------- */
-
-  /* Hamburger menu button */
-  .mobile-menu-btn {
-    display: flex;
-    width: 44px;
-    height: 44px;
-    border-radius: 8px;
-    justify-content: center;
-    align-items: center;
-    background: var(--brand);
-    color: #fff;
-    font-size: 26px;
-    cursor: pointer;
-  }
-
-  /* Content should span full width */
-  .main {
-    width: 100%;
-  }
-}
-
-/* Ensure sidebar stays on top of everything */
-.sidebar {
-  z-index: 9999;
-}
-
-  
 </style>
 </head>
 <body>
@@ -231,12 +160,8 @@ body {
 
   <!-- TOP BAR -->
   <header class="topbar">
-   
     <a href="profile.html">My Account</a>
     <button id="logoutBtn">Logout</button>
-<div class="mobile-menu-btn" onclick="toggleMenu()">☰</div>
-
-    
   </header>
 
   <!-- CONTENT -->
@@ -290,7 +215,7 @@ auth.onAuthStateChanged(async user => {
   }
 
   document.getElementById("welcome").textContent =
-    `Welcome, ${user.displayName || user.email}`;
+    Welcome, ${user.displayName || user.email};
 
 
 
@@ -298,7 +223,7 @@ const snap = await db.ref("members/" + user.uid).once("value");
   const profile = snap.val() || {};
 
   document.getElementById("memberSummary").textContent =
-    `${profile.fullName || '—'} · ${profile.country || '—'} · Joined: ${profile.joinedAt || '—'}`;
+    ${profile.fullName || '—'} · ${profile.country || '—'} · Joined: ${profile.joinedAt || '—'};
 
 
 
@@ -326,18 +251,18 @@ Object.keys(allEvents).forEach(eventId => {
 let html = "";
 
 if (joined.length > 0) {
-  html = joined.map(e => `
+  html = joined.map(e => 
     <li>
       <strong>${e.eventTitle}</strong><br>
       <span class="small">Joined: ${e.joinedAt}</span>
     </li>
-  `).join("");
+  ).join("");
 } else {
   html = "<li>No joined events yet</li>";
 }
 
 document.getElementById("joinedEvents").innerHTML =
-  `<ul class="small">${html}</ul>`;
+  <ul class="small">${html}</ul>;
 
 
 
@@ -347,21 +272,6 @@ document.getElementById("logoutBtn").addEventListener("click", async () => {
   window.location.href = "/#joinPage";
 });
  }); 
-
-
-
-
-
-
-
-
-// MOBILE MENU TOGGLE
-document.getElementById("menuBtn").addEventListener("click", () => {
-  document.querySelector(".sidebar").classList.toggle("show");
-});
-
-
-  
 </script>
 
 </body>
