--- a/members/profile.html
+++ b/members/profile.html
@@ -112,16 +112,13 @@ button.saveBtn {
 }
 
 
-/* ================= MOBILE FIX ================= */
+/* ================= MOBILE NAV (max 880px) ================= */
 @media (max-width: 880px) {
 
-  /* Shrink logo so hamburger fits */
-  .header-left img {
-    height: 32px !important;
-  }
-
-  .header-left div {
-    font-size: 14px !important;
+  /* Header adjusts automatically */
+  .header {
+    height: auto !important;
+    padding-top: 6px; /* pushes whole header up slightly */
   }
 
   /* Hide desktop nav */
@@ -129,30 +126,39 @@ button.saveBtn {
     display: none !important;
   }
 
-  /* Make header items fit */
-  .header {
-    padding: 10px 14px !important;
-  }
-
-  /* Always show hamburger icon */
+  /* Hamburger button */
   .mobile-menu-btn {
     display: block !important;
-    position: absolute;
-    right: 16px;
-    top: 18px;
     font-size: 40px;
-    color: #fff !important; /* WHITE so it's visible on dark header */
+    line-height: 1;
+    color: #ffffff !important;   /* <-- WHITE icon so it is visible */
     background: none !important;
     border: none !important;
+    padding: 0;
+    margin-top: -6px;             /* <-- moves the ≡ upward */
+    cursor: pointer;
     z-index: 99999;
   }
 
-  /* Mobile dropdown */
+  /* Mobile dropdown menu */
   .mobile-nav {
     display: none;
     flex-direction: column;
     background: var(--brand);
-    padding: 15px 24px;
+    padding: 18px 24px;
+  }
+
+  /* Mobile menu links */
+  .mobile-nav a,
+  .mobile-nav button {
+    color: #ffffff !important;     /* <-- makes the links white */
+    text-decoration: none;
+    padding: 12px 0;
+    font-size: 18px;
+    text-align: left;
+    background: none;
+    border: none;
+    font-weight: 500;
   }
 
   .mobile-nav.show {
