--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -348,6 +348,13 @@ document.getElementById("logoutBtn").addEventListener("click", async () => {
   window.location.href = "/#joinPage";
 });
 });
+
+
+// MOBILE NAV TOGGLE
+document.querySelector(".mobile-menu-btn").addEventListener("click", () => {
+  document.getElementById("mobileMenu").classList.toggle("show");
+});
+  
 </script>
 
 </body>
